adding google map

--- a/index.html
+++ b/index.html
@@ -43,15 +43,21 @@
       </div>
     </div>
     <div class="row">
-      <div id="map" class="small-12 columns debug">
+      <div id="map" class="small-12 columns h300 debug">
       </div>
     </div>
 
   </main>
 
 
-  <script src="./assets/public/js/main.js"></script>
+  <footer>
+    <div class="row">
+      <div class="small-12 columns h300 debug">
+      </div>
+    </div>
+  </footer>
+
   <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD67l5ej33fk4Y1YT4SjLNeSYJwHp0G22I&libraries=places"></script>
-  <script src="./assets/src/js/main.js"></script>
+  <script src="./assets/public/js/main.js"></script>
 </body>
 </html>
