--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html ng-app="voyager">
 <head>
   <meta charset="utf-8">
-
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Voyager</title>
   <link href='https://fonts.googleapis.com/css?family=Dancing+Script:700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="./assets/public/css/styles.css">
