--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <head>
 
-    <div id="hero-img" class="h545 hero debug">
+    <div id="hero-img" class="h533 hero debug">
       <nav class="top-bar debug">
         <ul class="title-area">
           <li class="name">
@@ -22,7 +22,7 @@
 
       <div class="row">
         <div id="hero-text" class="small-12 text-center columns pt150 debug">
-          <h1 class="c-white f-dancing-script fz-5">Oh, the places you'll go</h1>
+          <h1 class="c-white f-dancing-script fz-4-5">Oh, the places you'll go</h1>
         </div>
       </div>
       <div class="debug mt38" style="background-color: rgba(0, 0, 0, .7)">
