--- a/index.html
+++ b/index.html
@@ -54,12 +54,39 @@
 
   <main>
 
+    <div class="row" ng-if="place.places <= 0">
+      <div class="small-12 medium-4 columns pt50">
+        <div class="row">
+          <div class="small-11 small-centered text-center columns">
+            <h3 class="c-gray">1. What to do</h3>
+            <h6 class="c-gray">Enter in an activity that you're looking for, whether it's going to the movies or finding a slice of pie.</h6>
+          </div>
+        </div>
+      </div>
+      <div class="small-12 medium-4 columns pt50">
+        <div class="row">
+          <div class="small-11 small-centered text-center columns">
+            <h3 class="c-gray">2. Where to go </h3>
+            <h6 class="c-gray">Find where your activity is happening either by city, zipcode or current location.</h6>
+          </div>
+        </div>
+      </div>
+      <div class="small-12 medium-4 columns pt50">
+        <div class="row">
+          <div class="small-11 small-centered text-center columns">
+            <h3 class="c-gray">3. See results</h3>
+            <h6 class="c-gray">Browse through a list of activities based on the requested location.</h6>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <div class="row" ng-hide="place.places <= 0">
       <div class="small-12 text-center columns pt25 debug">
         <h4>Places near {{place.newPlace.location || "your current location"}}</h4>
       </div>
     </div>
-    <div class="row">
+    <div class="row" ng-hide="place.places <= 0">
       <div id="map" class="small-12 columns h400 debug">
       </div>
     </div>
