--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
   <link href='https://fonts.googleapis.com/css?family=Dancing+Script:700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="./assets/public/css/styles.css">
 </head>
+
 <body ng-controller="PlacesCtrl as place">
 
-  <head>
+  <header>
     <div id="hero-img" class="h533 hero debug">
       <nav class="top-bar debug">
         <ul class="title-area">
           <li class="name">
-            <h2><a href="">Voyager</a></h2>
+            <h2><a href="index.html">Voyager</a></h2>
           </li>
         </ul>
       </nav>
@@ -42,16 +43,16 @@
           </div>
           <div class="row">
             <div class='small-6 medium-3 small-centered columns pt15'>
-              <button class="button postfix" type="submit">Search</button>
+              <button class="button postfix" ng-click="instructions=true" type="submit">Search</button>
             </div>
           </div>
         </form>
       </div>
     </div>
-  </head>
+  </header>
 
   <main>
-    <div class="row" ng-if="place.places <= 0">
+    <div class="row" ng-hide="instructions">
       <div class="small-12 medium-4 columns pt50">
         <div class="row">
           <div class="small-11 small-centered text-center columns">
@@ -84,7 +85,6 @@
       </div>
     </div>
     <div class="row">
-    <!-- <div class="row" ng-hide="place.places <= 0"> -->
       <div id="map" class="small-12 columns h400 debug">
       </div>
     </div>
